--- a/styles/basic.css
+++ b/styles/basic.css
@@ -28,3 +28,12 @@ h1, p {
     padding: 0 10px;
 }
 
+.divider {
+    min-width: 420px;
+    width: 100%;
+    height: 1px;
+    background-color: var(--color-main-black);
+    border: none;
+    margin: 0 auto;
+}
+
